// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericRefinementList renders markup with state 1`] = `
<ng-ais-numeric-menu
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-NumericMenu"
  >
    
        
    
    <div
      class="ais-NumericMenu-body ais-body"
    >
      
          
      <ul
        class="ais-NumericMenu-list"
      >
        
            
        
        <li
          class="ais-NumericMenu-item ais-NumericMenu-item--selected"
        >
          
              
          <label
            class="ais-NumericMenu-label"
          >
            
                
            <input
              class="ais-NumericMenu-radio"
              name="NumericRefinementList"
              type="radio"
            />
            
                10
              
          </label>
          
            
        </li>
        <li
          class="ais-NumericMenu-item"
        >
          
              
          <label
            class="ais-NumericMenu-label"
          >
            
                
            <input
              class="ais-NumericMenu-radio"
              name="NumericRefinementList"
              type="radio"
            />
            
                20
              
          </label>
          
            
        </li>
        
          
      </ul>
      
        
    </div>
    
      
  </div>
    
</ng-ais-numeric-menu>
`;

exports[`NumericRefinementList renders markup without state 1`] = `
<ng-ais-numeric-menu
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-NumericMenu"
  >
    
        
    
    <div
      class="ais-NumericMenu-body ais-body"
    >
      
          
      <ul
        class="ais-NumericMenu-list"
      >
        
            
        
        
          
      </ul>
      
        
    </div>
    
      
  </div>
    
</ng-ais-numeric-menu>
`;

exports[`NumericRefinementList should be hidden with autoHideContainer 1`] = `
<ng-ais-numeric-menu
  autoHideContainer={[Function Boolean]}
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-NumericMenu"
  >
    
        
    
    
      
  </div>
    
</ng-ais-numeric-menu>
`;
